# Zebra-Print-Service

./: .gitignore  README.md  build.gradle  settings.gradle
ZebraPrintService/: build.gradle  proguard-rules.pro
ZebraPrintService/debug/: app-debug.apk  output.json
ZebraPrintService/release/: ZebraPrintService-release.apk  app-release.apk  output.json
ZebraPrintService/src/main/: AndroidManifest.xml
ZebraPrintService/src/main/cpp/: CMakeLists.txt  CPCHelper.cpp  Internal.h  ZPLHelper.cpp  jni.cpp
ZebraPrintService/src/main/java/com/zebra/zebraprintservice/: ImageToPdfTask.java  NetworkDevice.java  PrinterAdapter.java
ZebraPrintService/src/main/java/com/zebra/zebraprintservice/activities/: AddActivity.java  ImagePrintActivity.java  PrinterInfoActivity.java  SettingsActivity.java
ZebraPrintService/src/main/java/com/zebra/zebraprintservice/connection/: PrinterConnection.java  ZebraBluetoothPrinter.java  (+3 more)
ZebraPrintService/src/main/res/layout/: activity_printer_info.xml  activity_settings.xml
ZebraPrintService/src/main/res/menu/: add_activity_menu.xml  settings_menu.xml
ZebraPrintService/src/main/res/values/: colors.xml  strings.xml  styles.xml
ZebraPrintService/src/main/res/xml/: app_restrictions.xml
app/: proguard-rules.pro
app/src/main/cpp/: base64.h
app/src/main/res/drawable/: ic_printer.xml  ic_printservice.xml
app/src/main/res/layout/: activity_add.xml  activity_printer_info.xml  listview_printer.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: printservice.xml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
